2010-01-10 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, Makefile.in, sdas/*/Makefile.in,
	  sdcc/sdcc.dsw, sdas/asranlib/asranlib.dsp, config.dsp:
	  as renamed to sdas, as/link renamed to sdas/aslink,
	  as/z80 renamed to sdac/asz80, as/mcs51 renamed to sdas/as8051,
	  as/hc80 renamed to sdcc/sdas/as6808
	* debugger/mcs51/cmd.c, sim/ucsim/utils.cc, sdcc/sdas/aslink/lklibr.c,
	  support/cpp/libcpp/macro.c: fixed compiler warnings

2010-01-09 Borut Razem <borut.razem AT siol.net>

	* as/*/conf.mk: removed
	  as/conf.mk: added
	  as/*/Makefile.in: use common as/conf.mk
	  as/*/clean.in: unified
	* src/SDCCmain.c, src/z80/main.c,
	  device/lib/z80/Makefile.in, device/lib/gbz80/Makefile.in,
	  as/asxxsrc/asmain.c, as/link/aslink.h,
	  support/regression/Makefile.in,
	  support/regression/ports/ucz80/spec.mk:
	  object file extension for z80 and gb targets changed from .o to .rel
	* .version, doc/sdccman.lyx: bumped version to 2.9.6

2010-01-04 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx, support/cpp/libcpp/internal.h,
	  support/cpp/libcpp/lex.c, support/cpp/sdcpp.c:
	  fixed bug #2919991: #Pragma preproc_asm cannot be used by -- std-c99.
	* support/cpp/libcpp/macro.c, support/cpp/version.c:
	  SDCPP synchronized with GCC CPP release version 4.4.2
	* as/link/lklist.c: fixed NULL pointer dereference
	* as/link/lkmain.c: do not complaint when opening optional adb files

2009-12-31 Borut Razem <borut.razem AT siol.net>

	* as/link/lkarea.c, as/link/lkdata.c, as/link/lklist.c,
	  as/link/lks19.c, as/link/lkmain.c, as/link/lkeval.c,
	  as/link/lklibr.c, as/link/lkaomf51.c, as/link/lkhead.c,
	  as/link/lklex.c, as/link/lkrloc.c, as/link/aslink.h:
	  sync with aslink 2.0
	* as/link/lks19.c: include "sdld.c"
	* as/link/aslink.dsp: cleaning
	* as/link/aslink.h: changed the type Character Type Definitions to char

2009-12-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fixed bug 2912013
