@@ -1,3 +1,8 @@
+2009-01-10 Raphael Neider <rneider AT web.de>
+
+	* src/pic/gen.c (genCmp): do not clobber CARRY when storing the
+	  result of the comparison (fixes #2929477), cosmetic changes
+
 2010-01-10 Borut Razem <borut.razem AT siol.net>
 
 	* configure.in, configure, Makefile.in, sdas/*/Makefile.in,
